fix tinymce alignment classes

--- a/scss/custom/objects/_typography.scss
+++ b/scss/custom/objects/_typography.scss
@@ -110,15 +110,15 @@ $app-icons: (
 .align_center  { @extend %text_-center;}
 .align_right   { @extend %text_-right;}
 
-img.align-left {
+img.align_left {
 	float:left;
-	@include px-and-rem(margin-right, 1);
+	@include px-and-rem(margin-right, 1.5);
 	@include px-and-rem(margin-bottom, 1);
 }
 
-img.align-right {
+img.align_right {
 	float:right;
-	@include px-and-rem(margin-left, 1);
+	@include px-and-rem(margin-left, 1.5);
 	@include px-and-rem(margin-bottom, 1);
 }
 
